--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
 <title>Привет Илля</title>
 <h1>Привет Илля от Кости и Стешы.</h1>
-<p>Етот сайт написал я спецыально для тебя. Знай ты мой лутшый друг.</p>
+<h2>Етот сайт написал я спецыально для тебя. Знай ты мой лутшый друг.</h2>
+<h2>От Стешы:</h2>
+<h2>Привет мой лутшый друг с празником тебя 😺</h2>
+<h2>От Кости (от меня):</h2>
