--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <title>Привет Илля</title>
-<h1>Привет Илля от Кости и Стешы.</h1>
-<h2>Етот сайт написал я спецыально для тебя. Знай ты мой лутшый друг.</h2>
-<h2>От Стешы:</h2>
-<h2>Привет мой лутшый друг с празником тебя 😺</h2>
-<h2>От Кости (от меня):</h2>
+<h1>Привет Илля от Кости и Стешы. </h1>
+<h2>Етот сайт написал я спецыально для тебя.Читать только тебе и не кому больше.</h2>
+<h2>От Стешы: Привет мой лутшый друг с празником тебя 😺</h2>
+<h2>От Кости (от меня): Привет Илюха. Я хотел чтоб ты знал что я в тебя всегда верил и буду. Я мог показаться для тебя немного строгаватый иногда но ето не так. Я тебя люблю
+(по дружески)</h2>
